INT-13969: Fix text cut off for Book activity when printing

--- a/scss/_plugins.scss
+++ b/scss/_plugins.scss
@@ -490,6 +490,9 @@
 #page-mod-book-print {
     font-size: 18px !important;
     font-family: $font-family-serif !important;
+    p, div.book_chapter {
+        margin-right: 3em;
+    }
 }
 
 /**
